k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke-couch-api
  labels:
    app: joke-couch-api
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: joke-couch-api
