k8s/couchdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  labels:
    app: couchdb
spec:
  type: ClusterIP
  ports:
  - port: 5984
    targetPort: 5984
    protocol: TCP
    name: http
  selector:
    app: couchdb
