k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke-couch-web
  labels:
    app: joke-couch-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: joke-couch-web
